--- a/josephus_problem.ipynb
+++ b/josephus_problem.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -10,7 +10,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "[7, 14, 21, 28, 5, 13, 22, 30, 9, 18, 27, 8, 19, 1, 12, 25, 10, 24, 11, 29, 17, 6, 3, 2, 4, 16, 26, 15, 20, 23]\nWall time: 0 ns\n"
+     "text": "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]\nWall time: 0 ns\n"
     }
    ],
    "source": [
@@ -18,42 +18,49 @@
     "# Try to simulate the Joseph problem\n",
     "# Sunnyoung  2020.07.09\n",
     "# %%time Jupyter notebook's magic method\n",
-    "def josephus_problem(total=100, lucky_number=10, start_pos=0):   #Step + Start_position\n",
+    "def josephus_problem(total=100, step=10, start_pos=1):   #Step + Start_position\n",
     "    \"\"\"Python code for Josephus Problem\n",
     "    \"\"\"\n",
+    "    if total <= 0 or step <= 0 or start_pos <= 0:\n",
+    "        raise Exception(\"The input parameter needs to be greater than 0.\")\n",
     "    STAY_STIL = True\n",
     "    OUT = False\n",
     "    # Everyone was there at the beginning\n",
-    "    circle = [STAY_STIL]*total #in_circle_ornot\n",
+    "    stay_or_leave = [STAY_STIL]*total \n",
     "    # circle = [STAY_STIL for x in range(0, total)]    \n",
     "    result = []\n",
-    "    index = start_pos % total #pos\n",
+    "    index = (start_pos - 1) % total #pos\n",
     "    count = out_number = 0\n",
     "\n",
     "    while out_number < total:\n",
     "        # If the person is still in the circle, then count.\n",
-    "        if circle[index]:\n",
+    "        if stay_or_leave[index]:\n",
     "            count += 1\n",
-    "        if count == lucky_number:\n",
+    "        if count == step:\n",
     "            result.append(index + 1) #In fact, result is a queue.\n",
     "            out_number += 1\n",
     "            count = 0\n",
-    "            circle[index] = OUT\n",
+    "            stay_or_leave[index] = OUT\n",
     "            # print(result[out_number-1])\n",
     "        index = (index + 1)% total  # like i++ % 256\n",
     "    return result\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    TOTAL = 30\n",
-    "    LUCKY_NUMBER = 7\n",
-    "    START_POSITION = 0\n",
-    "    result = josephus_problem(TOTAL, LUCKY_NUMBER, START_POSITION)\n",
-    "    print(result)\n"
+    "    TOTAL = 20\n",
+    "    STEP = 1\n",
+    "    START_POSITION = 1\n",
+    "\n",
+    "    try:\n",
+    "        result = josephus_problem(TOTAL, STEP, START_POSITION)\n",
+    "        print(result)\n",
+    "    except Exception as ex:\n",
+    "        print(ex)\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 28,
    "metadata": {
     "tags": []
    },
@@ -61,7 +68,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "出局的顺序编号为： [7, 4, 2, 1, 3, 6, 10, 5, 8, 9]\n"
+     "text": "出局的顺序编号为： [2, 4, 6, 8, 10, 12, 14, 16, 18, 20, 3, 7, 11, 15, 19, 5, 13, 1, 17, 9]\n"
     }
    ],
    "source": [
@@ -70,7 +77,7 @@
     "def is_inputlegal(input_):\n",
     "    if not input_.isdigit():\n",
     "        return False\n",
-    "    elif int(input_) < 0:\n",
+    "    elif int(input_) <= 0:\n",
     "        return False\n",
     "    else:\n",
     "        return True\n",
@@ -79,7 +86,7 @@
     "if is_inputlegal(total_number):\n",
     "    lucky_number = input(\"数到几排除成员？\")\n",
     "    if is_inputlegal(lucky_number):\n",
-    "        result = josephus_problem(int(total_number), int(LUCKY_NUMBER))\n",
+    "        result = josephus_problem(int(total_number), int(lucky_number))\n",
     "        print(\"出局的顺序编号为：\", result)\n",
     "    else:\n",
     "        print(\"请输入正整数\")\n",
@@ -124,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 10,
    "metadata": {
     "tags": []
    },
@@ -132,7 +139,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "The order of outs is:\nName:Bob\tSex:male\tAge:18\nName:Mike\tSex:male\tAge:21\nName:Eve\tSex:female\tAge:18\nName:Amy\tSex:female\tAge:20\nName:Max\tSex:female\tAge:23\nName:Sam\tSex:male\tAge:25\nName:John\tSex:male\tAge:23\nName:Ben\tSex:male\tAge:25\nName:Dani\tSex:female\tAge:22\nName:Alice\tSex:female\tAge:20\nName:Alan\tSex:male\tAge:19\nWall time: 2 ms\n"
+     "text": "[7, 3, 11, 9, 8, 10, 2, 6, 1, 4, 5]\nThe order of outs is:\nName:Bob\tSex:male\tAge:18\nName:Mike\tSex:male\tAge:21\nName:Eve\tSex:female\tAge:18\nName:Amy\tSex:female\tAge:20\nName:Max\tSex:female\tAge:23\nName:Sam\tSex:male\tAge:25\nName:John\tSex:male\tAge:23\nName:Ben\tSex:male\tAge:25\nName:Dani\tSex:female\tAge:22\nName:Alice\tSex:female\tAge:20\nName:Alan\tSex:male\tAge:19\nWall time: 972 µs\n"
     }
    ],
    "source": [
@@ -179,12 +186,16 @@
     "\n",
     "total = len(group)\n",
     "step = 7\n",
-    "start_pos = 0\n",
-    "result = josephus_problem(total, step, start_pos)\n",
-    "\n",
-    "print(\"The order of outs is:\")\n",
-    "for i in range(total):\n",
-    "    group[result[i]].show_info()\n",
+    "start_pos = 1\n",
+    "try:\n",
+    "    result = josephus_problem(total, step, start_pos)\n",
+    "    print(result)\n",
+    "except Exception as ex:\n",
+    "    print(ex)\n",
+    "else:\n",
+    "    print(\"The order of outs is:\")\n",
+    "    for i in range(total):\n",
+    "        group[result[i]].show_info()\n",
     "    "
    ]
   },
@@ -213,6 +224,52 @@
     "assert(test == \"Dani\")\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "[2, 4, 6, 8, 10, 12, 14, 16, 18, 20, 3, 7, 11, 15, 19, 5, 13, 1, 17, 9]\nWall time: 0 ns\n"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "# Try to simulate the Joseph problem\n",
+    "# Coded by LI Yinlin\n",
+    "# %%time Jupyter notebook's magic method\n",
+    "def josephus_problem(total=100, step=10, start_pos=1):   #Step + Start_position\n",
+    "    \"\"\"Python code for Josephus Problem\n",
+    "    \"\"\"\n",
+    "    ring_ = list(range(1, total + 1))\n",
+    "    out_order = (start_pos - 1 + step - 1) %total\n",
+    "    total -= 1\n",
+    "    result = [ring_.pop(out_order)]\n",
+    "    for i in range(total):\n",
+    "        out_order = (out_order + step - 1)% total\n",
+    "        total -= 1\n",
+    "        result.append(ring_.pop(out_order))\n",
+    "    return result\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    TOTAL = 20\n",
+    "    LUCKY_NUMBER = 2\n",
+    "    START_POSITION = 1\n",
+    "    result = josephus_problem(TOTAL, LUCKY_NUMBER, START_POSITION)\n",
+    "    print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -230,7 +287,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1594615378496",
+   "name": "python_defaultSpec_1594619281104",
    "display_name": "Python 3.7.7 64-bit ('base': conda)"
   }
  },
