Add the function of write result to file.

--- a/josephus_problem.ipynb
+++ b/josephus_problem.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {
     "tags": []
    },
@@ -139,7 +139,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "[7, 3, 11, 9, 8, 10, 2, 6, 1, 4, 5]\nThe order of outs is:\nName:Bob\tSex:male\tAge:18\nName:Mike\tSex:male\tAge:21\nName:Eve\tSex:female\tAge:18\nName:Amy\tSex:female\tAge:20\nName:Max\tSex:female\tAge:23\nName:Sam\tSex:male\tAge:25\nName:John\tSex:male\tAge:23\nName:Ben\tSex:male\tAge:25\nName:Dani\tSex:female\tAge:22\nName:Alice\tSex:female\tAge:20\nName:Alan\tSex:male\tAge:19\nWall time: 972 µs\n"
+     "text": "[7, 3, 11, 9, 8, 10, 2, 6, 1, 4, 5]\nThe order of outs is:\nName:Bob\tSex:male\tAge:18\nName:Mike\tSex:male\tAge:21\nName:Eve\tSex:female\tAge:18\nName:Amy\tSex:female\tAge:20\nName:Max\tSex:female\tAge:23\nName:Sam\tSex:male\tAge:25\nName:John\tSex:male\tAge:23\nName:Ben\tSex:male\tAge:25\nName:Dani\tSex:female\tAge:22\nName:Alice\tSex:female\tAge:20\nName:Alan\tSex:male\tAge:19\nWall time: 3.99 ms\n"
     }
    ],
    "source": [
@@ -157,33 +157,39 @@
     "    # Set some raleted parameter\n",
     "    def set_name(self, name):\n",
     "        self.__name = name\n",
-    "    def set_age(self, age):\n",
-    "        self.__age = age\n",
     "    def set_sex(self, sex):\n",
     "        self.__sex = sex\n",
-    "\n",
+    "    def set_age(self, age):\n",
+    "        self.__age = age\n",
+    "    \n",
     "    # Return infomation\n",
     "    def get_name(self):\n",
     "        return self.__name\n",
-    "    def get_age(self):\n",
-    "        return self.__age\n",
     "    def get_sex(self):\n",
     "        return self.__sex\n",
-    "    \n",
+    "    def get_age(self):\n",
+    "        return self.__age\n",
+    "    def get_all(self):\n",
+    "        #return self.__name + self.__sex + self.__age + '\\n'\n",
+    "        return \"{} {} {}\\n\".format(self.__name, self.__sex, self.__age)\n",
+    "\n",
     "    # Print infomation about this people\n",
     "    def show_info(self):\n",
     "        print(\"Name:{}\\tSex:{}\\tAge:{}\".format(self.__name, self.__sex, self.__age))\n",
     "\n",
+    "# Open personal information file \n",
     "personal_info_file = open(\".\\\\Personal Information.txt\")\n",
     "personal_info = []\n",
-    "for line in personal_info_file:\n",
+    "for line in personal_info_file: # Read it by line\n",
     "    personal_info.append(line.strip('\\n')) # remove \\n\n",
     "personal_info_file.close()\n",
     "\n",
-    "group = {}\n",
+    "group = {} # Initialize a group of people(use dictionary type)\n",
+    "# Use blank to split the information and use them to create new object of Person Class\n",
     "for i in range(len(personal_info)):\n",
     "        group[i+1] = Person(personal_info[i].split(\" \")[0], personal_info[i].split(\" \")[1], personal_info[i].split(\" \")[2])\n",
     "\n",
+    "# And then call josephus_problem function to get the sequence\n",
     "total = len(group)\n",
     "step = 7\n",
     "start_pos = 1\n",
@@ -193,15 +199,17 @@
     "except Exception as ex:\n",
     "    print(ex)\n",
     "else:\n",
+    "    personal_info_file_aftprocessing = open(\"Personal Infomation after Processing.txt\",\"w\")\n",
     "    print(\"The order of outs is:\")\n",
     "    for i in range(total):\n",
     "        group[result[i]].show_info()\n",
-    "    "
+    "        personal_info_file_aftprocessing.write(group[result[i]].get_all())\n",
+    "    personal_info_file_aftprocessing.close() # Don't forget to close the file\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {
     "tags": []
    },
@@ -240,7 +248,7 @@
    ],
    "source": [
     "%%time\n",
-    "# Try to simulate the Joseph problem\n",
+    "# Joseph problem\n",
     "# Coded by LI Yinlin\n",
     "# %%time Jupyter notebook's magic method\n",
     "def josephus_problem(total=100, step=10, start_pos=1):   #Step + Start_position\n",
@@ -263,13 +271,6 @@
     "    result = josephus_problem(TOTAL, LUCKY_NUMBER, START_POSITION)\n",
     "    print(result)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -287,7 +288,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1594619281104",
+   "name": "python_defaultSpec_1594629911236",
    "display_name": "Python 3.7.7 64-bit ('base': conda)"
   }
  },
