--- a/josephus_problem.ipynb
+++ b/josephus_problem.ipynb
@@ -18,6 +18,7 @@
     "# Try to simulate the Joseph problem\n",
     "# Sunnyoung  2020.07.09\n",
     "# %%time Jupyter notebook's magic method\n",
+    "\n",
     "def josephus_problem(total=100, step=10, start_pos=1):   #Step + Start_position\n",
     "    \"\"\"Python code for Josephus Problem\n",
     "    \"\"\"\n",
@@ -55,12 +56,16 @@
     "        print(result)\n",
     "    except Exception as ex:\n",
     "        print(ex)\n",
-    "        "
+    "    \n",
+    "    test = josephus_problem(1, 1, 1)\n",
+    "    assert(test[0] == 1)\n",
+    "    test = josephus_problem(100, 1, 1)\n",
+    "    assert(test[0] == 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {
     "tags": []
    },
@@ -68,7 +73,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "出局的顺序编号为： [2, 4, 6, 8, 10, 12, 14, 16, 18, 20, 3, 7, 11, 15, 19, 5, 13, 1, 17, 9]\n"
+     "text": "出局的顺序编号为： [2, 1]\n"
     }
    ],
    "source": [
@@ -131,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {
     "tags": []
    },
@@ -139,19 +144,19 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "[7, 3, 11, 9, 8, 10, 2, 6, 1, 4, 5]\nThe order of outs is:\nName:Bob\tSex:male\tAge:18\nName:Mike\tSex:male\tAge:21\nName:Eve\tSex:female\tAge:18\nName:Amy\tSex:female\tAge:20\nName:Max\tSex:female\tAge:23\nName:Sam\tSex:male\tAge:25\nName:John\tSex:male\tAge:23\nName:Ben\tSex:male\tAge:25\nName:Dani\tSex:female\tAge:22\nName:Alice\tSex:female\tAge:20\nName:Alan\tSex:male\tAge:19\nWall time: 3.99 ms\n"
+     "text": "[7, 3, 11, 9, 8, 10, 2, 6, 1, 4, 5]\nThe order of outs is:\nName:Bob\tSex:male\tAge:18\nName:Mike\tSex:male\tAge:21\nName:Eve\tSex:female\tAge:18\nName:Amy\tSex:female\tAge:20\nName:Max\tSex:female\tAge:23\nName:Sam\tSex:male\tAge:25\nName:John\tSex:male\tAge:23\nName:Ben\tSex:male\tAge:25\nName:Dani\tSex:female\tAge:22\nName:Alice\tSex:female\tAge:20\nName:Alan\tSex:male\tAge:19\n"
     }
    ],
    "source": [
-    "%%time\n",
+    "# %%time\n",
     "# Create a new class which named person and used in the Joseph problem\n",
     "# Sunnyoung  2020.07.09\n",
     "# %%time Jupyter notebook's magic function\n",
     "\n",
     "class Person(object):\n",
     "    # Attention, is __; not _!\n",
-    "    def __init__(self, name, sex, age):\n",
-    "        self.__name = name\n",
+    "    def __init__(self, name, sex, age): # This is a magic function\n",
+    "        self.__name = name              # PEP-8  _name\n",
     "        self.__sex = sex\n",
     "        self.__age = age\n",
     "    # Set some raleted parameter\n",
@@ -169,8 +174,7 @@
     "        return self.__sex\n",
     "    def get_age(self):\n",
     "        return self.__age\n",
-    "    def get_all(self):\n",
-    "        #return self.__name + self.__sex + self.__age + '\\n'\n",
+    "    def __str__(self):  #magic func\n",
     "        return \"{} {} {}\\n\".format(self.__name, self.__sex, self.__age)\n",
     "\n",
     "    # Print infomation about this people\n",
@@ -203,7 +207,7 @@
     "    print(\"The order of outs is:\")\n",
     "    for i in range(total):\n",
     "        group[result[i]].show_info()\n",
-    "        personal_info_file_aftprocessing.write(group[result[i]].get_all())\n",
+    "        personal_info_file_aftprocessing.write(group[result[i]].__str__())\n",
     "    personal_info_file_aftprocessing.close() # Don't forget to close the file\n"
    ]
   },
@@ -227,10 +231,8 @@
     "for line in personal_info_file:\n",
     "    personal_info.append(line.strip('\\n')) # remove \\n\n",
     "\n",
-    "\n",
     "test = personal_info[0].split(\" \")[0]\n",
-    "assert(test == \"Dani\")\n",
-    "\n"
+    "assert(test == \"Dani\")\n"
    ]
   },
   {
@@ -271,6 +273,102 @@
     "    result = josephus_problem(TOTAL, LUCKY_NUMBER, START_POSITION)\n",
     "    print(result)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Runing\nCat can run!\nDog can run!\n0.8\nDog can run!\n"
+    }
+   ],
+   "source": [
+    "# Class: 具有共同特征的实体的抽象,共同的属性（静态特征），共同的方法（动态的行为特征）\n",
+    "\n",
+    "class Animal(object):\n",
+    "    def __init__(self, temp):\n",
+    "        self.temp = temp\n",
+    "    def run(self):\n",
+    "        print(\"Runing\")\n",
+    "    def func(self):\n",
+    "        print(self.temp)\n",
+    "\n",
+    "class Cat(Animal):\n",
+    "    def __init__(self, name, length):\n",
+    "        self.name = name\n",
+    "        self.length = length\n",
+    "        super().__init__(length)\n",
+    "\n",
+    "    def __str__(self):  #__str__: Magic func\n",
+    "        return \"A cat\"\n",
+    "    @property\n",
+    "    def weight(self):\n",
+    "        return 0.5 * self.length\n",
+    "\n",
+    "    def run(self):\n",
+    "        print(\"Cat can run!\")\n",
+    "\n",
+    "class Dog(Animal):\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "\n",
+    "    def run(self):\n",
+    "        print(\"Dog can run!\")\n",
+    "\"\"\"\n",
+    "Xiaobai = Cat(\"小白\", 0.8)\n",
+    "print(Xiaobai.length)\n",
+    "Xiaobai.length = 1.2\n",
+    "print(Xiaobai.length)\n",
+    "print(Xiaobai.weight)\n",
+    "Xiaobai  #instead of print(Xiaobai.get_all)\n",
+    "\"\"\"\n",
+    "a = Animal(1)\n",
+    "xiaobai = Cat(\"小白\", 0.8)\n",
+    "xiaohei = Dog(\"小黑\")\n",
+    "\n",
+    "a.run()\n",
+    "xiaobai.run()\n",
+    "xiaohei.run()\n",
+    "\n",
+    "xiaobai.func()\n",
+    "\n",
+    "def func(obj):\n",
+    "    obj.run()\n",
+    "\n",
+    "func(xiaohei)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "x\n"
+    }
+   ],
+   "source": [
+    "def is_inputlegal(input_):\n",
+    "    if not input_.isdigit():\n",
+    "        return False\n",
+    "    elif int(input_) < 0:\n",
+    "        return False\n",
+    "    else:\n",
+    "        return True\n",
+    "\n",
+    "STEP = input(\"请输入数到几排除成员？\")\n",
+    "if is_inputlegal(STEP):\n",
+    "    print(\"x\")"
+   ]
   }
  ],
  "metadata": {
@@ -288,7 +386,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1594629911236",
+   "name": "python_defaultSpec_1595156501450",
    "display_name": "Python 3.7.7 64-bit ('base': conda)"
   }
  },
